--- a/Gioco dadi/index.html
+++ b/Gioco dadi/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
+    <input type="text" id="player1">
+    <input type="text" id="player2">
+
+  <button id="game">Lancia dado</button>
+  <p id="user"></p>
+  <p id="computer"></p>
+  <p id="result"></p>
+
+
     
-    
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
