--- a/Gioco dadi/index.html
+++ b/Gioco dadi/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <input type="text" id="player1">
-    <input type="text" id="player2">
+    <input type="text" id="player1" placeholder="nome giocatore">
+    <input type="text" id="player2" placeholder="nome giocatore">
 
   <button id="game">Lancia dado</button>
   <p id="user"></p>
